--- a/BullsEye/Base.lproj/Main.storyboard
+++ b/BullsEye/Base.lproj/Main.storyboard
@@ -18,8 +18,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="736" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="EX2-RB-CUH">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="EX2-RB-CUH">
                                 <rect key="frame" x="0.0" y="0.0" width="736" height="414"/>
+                                <viewLayoutGuide key="safeArea" id="fJS-ru-Xv0"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ETL-8I-yCd">
                                 <rect key="frame" x="0.0" y="0.0" width="736" height="414"/>
@@ -33,8 +34,8 @@
                                             <action selector="sliderMoved:" destination="BYZ-38-t0r" eventType="valueChanged" id="J5w-d9-iNU"/>
                                         </connections>
                                     </slider>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Put the Bull's Eye as close as you can to:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UHx-TN-ad7">
-                                        <rect key="frame" x="127.5" y="20" width="313" height="20"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Put the Bull's Eye as close as you can to:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UHx-TN-ad7">
+                                        <rect key="frame" x="127.66666666666669" y="20" width="313" height="20"/>
                                         <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="16"/>
                                         <color key="textColor" red="0.55634254220000001" green="0.97934550050000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -125,8 +126,8 @@
                                             <segue destination="wCZ-4k-BFC" kind="presentation" modalTransitionStyle="flipHorizontal" id="jYN-lv-RzX"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ffL-d6-gPh">
-                                        <rect key="frame" x="448.5" y="18" width="36" height="24"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ffL-d6-gPh">
+                                        <rect key="frame" x="448.66666666666669" y="18" width="36" height="24"/>
                                         <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="20"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -157,11 +158,14 @@
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="gk8-1h-QeZ" secondAttribute="bottom" constant="30" id="1Fr-LQ-jlg"/>
+                                    <constraint firstItem="UHx-TN-ad7" firstAttribute="leading" secondItem="Eci-uc-8jV" secondAttribute="leading" constant="127.5" id="3Ir-z3-Jxr"/>
                                     <constraint firstItem="UHx-TN-ad7" firstAttribute="top" secondItem="ETL-8I-yCd" secondAttribute="top" constant="20" id="5Fh-1U-tjA"/>
                                     <constraint firstAttribute="bottom" secondItem="KYT-0h-cap" secondAttribute="bottom" constant="30" id="5dZ-lK-DFE"/>
                                     <constraint firstItem="gk8-1h-QeZ" firstAttribute="leading" secondItem="KYT-0h-cap" secondAttribute="trailing" constant="3" id="6AZ-hk-l8F"/>
+                                    <constraint firstItem="ffL-d6-gPh" firstAttribute="leading" secondItem="UHx-TN-ad7" secondAttribute="trailing" constant="8" id="6Gg-Dz-bsT"/>
                                     <constraint firstAttribute="trailing" secondItem="PQF-j9-mIT" secondAttribute="trailing" constant="20" id="Aso-Ps-w28"/>
                                     <constraint firstItem="ikm-80-eme" firstAttribute="leading" secondItem="fOP-Y3-UBh" secondAttribute="trailing" constant="3" id="BWx-am-bi6"/>
+                                    <constraint firstItem="ffL-d6-gPh" firstAttribute="leading" secondItem="UHx-TN-ad7" secondAttribute="trailing" constant="8" id="ChF-Rx-TDM"/>
                                     <constraint firstAttribute="trailing" secondItem="cfU-k4-OhK" secondAttribute="trailing" constant="20" id="D1t-E3-D8i"/>
                                     <constraint firstAttribute="bottom" secondItem="ikm-80-eme" secondAttribute="bottom" constant="30" id="FLr-v5-Sas"/>
                                     <constraint firstItem="vOD-Lo-c5i" firstAttribute="top" secondItem="ffL-d6-gPh" secondAttribute="bottom" constant="37" id="H7E-09-efX"/>
@@ -181,24 +185,35 @@
                                     <constraint firstItem="fOP-Y3-UBh" firstAttribute="leading" secondItem="i48-uW-F6k" secondAttribute="trailing" constant="61" id="rGe-7V-ODv"/>
                                     <constraint firstItem="gk8-1h-QeZ" firstAttribute="leading" secondItem="KYT-0h-cap" secondAttribute="trailing" constant="3" id="rP0-lQ-CgU"/>
                                     <constraint firstAttribute="bottom" secondItem="cfU-k4-OhK" secondAttribute="bottom" constant="28" id="wiU-9t-sT6"/>
+                                    <constraint firstItem="ffL-d6-gPh" firstAttribute="leading" secondItem="UHx-TN-ad7" secondAttribute="trailing" constant="8" id="wpY-Fh-Lzh"/>
                                     <constraint firstAttribute="bottom" secondItem="i48-uW-F6k" secondAttribute="bottom" constant="25" id="yGk-Hw-tGQ"/>
                                 </constraints>
+                                <viewLayoutGuide key="safeArea" id="Eci-uc-8jV"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="EX2-RB-CUH" firstAttribute="leading" secondItem="kER-LA-iaU" secondAttribute="leading" id="8sr-hn-pvE"/>
+                            <constraint firstItem="ETL-8I-yCd" firstAttribute="top" secondItem="kER-LA-iaU" secondAttribute="top" id="I3n-T1-Qj4"/>
+                            <constraint firstItem="EX2-RB-CUH" firstAttribute="top" secondItem="kER-LA-iaU" secondAttribute="top" id="Iqn-dv-9Rc"/>
+                            <constraint firstItem="EX2-RB-CUH" firstAttribute="trailing" secondItem="kER-LA-iaU" secondAttribute="trailing" id="Lvk-at-T3K"/>
                             <constraint firstItem="EX2-RB-CUH" firstAttribute="bottom" secondItem="kER-LA-iaU" secondAttribute="bottom" id="ME0-Nm-t90"/>
                             <constraint firstItem="ETL-8I-yCd" firstAttribute="top" secondItem="kER-LA-iaU" secondAttribute="top" id="Mj4-SI-iyQ"/>
+                            <constraint firstItem="EX2-RB-CUH" firstAttribute="leading" secondItem="kER-LA-iaU" secondAttribute="leading" id="N9F-rG-Ue9"/>
                             <constraint firstItem="ETL-8I-yCd" firstAttribute="leading" secondItem="kER-LA-iaU" secondAttribute="leading" id="OZU-LM-940"/>
                             <constraint firstItem="EX2-RB-CUH" firstAttribute="leading" secondItem="kER-LA-iaU" secondAttribute="leading" id="OfD-SN-Qti"/>
                             <constraint firstItem="ETL-8I-yCd" firstAttribute="trailing" secondItem="kER-LA-iaU" secondAttribute="trailing" id="OhT-lL-HHL"/>
+                            <constraint firstItem="ETL-8I-yCd" firstAttribute="leading" secondItem="kER-LA-iaU" secondAttribute="leading" id="TZY-3U-p5G"/>
                             <constraint firstItem="EX2-RB-CUH" firstAttribute="trailing" secondItem="kER-LA-iaU" secondAttribute="trailing" id="cUR-we-ozP"/>
+                            <constraint firstItem="ETL-8I-yCd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ihi-GZ-Awg"/>
+                            <constraint firstItem="EX2-RB-CUH" firstAttribute="bottom" secondItem="kER-LA-iaU" secondAttribute="bottom" id="ioH-D7-vJd"/>
+                            <constraint firstItem="ETL-8I-yCd" firstAttribute="trailing" secondItem="kER-LA-iaU" secondAttribute="trailing" id="mwY-Ch-Ek0"/>
                             <constraint firstItem="kER-LA-iaU" firstAttribute="bottom" secondItem="ETL-8I-yCd" secondAttribute="bottom" id="oGF-vP-SVf"/>
                             <constraint firstItem="kER-LA-iaU" firstAttribute="bottom" secondItem="EX2-RB-CUH" secondAttribute="bottom" id="tx8-Yv-pUL"/>
                             <constraint firstItem="kER-LA-iaU" firstAttribute="trailing" secondItem="EX2-RB-CUH" secondAttribute="trailing" id="uRy-wz-82Y"/>
                             <constraint firstItem="EX2-RB-CUH" firstAttribute="top" secondItem="kER-LA-iaU" secondAttribute="top" id="uSz-s8-fhN"/>
                             <constraint firstItem="EX2-RB-CUH" firstAttribute="top" secondItem="kER-LA-iaU" secondAttribute="top" id="ugR-aj-fb7"/>
+                            <constraint firstItem="ETL-8I-yCd" firstAttribute="bottom" secondItem="kER-LA-iaU" secondAttribute="bottom" id="xA8-hK-lM9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="kER-LA-iaU"/>
                     </view>
